# Project1-energy-analysis

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  video_link.md
config/: config.yaml  constants.py
dashboards/: app.py
data/backup/: backup_energy.csv  backup_weather.csv
data/reports/: quality_report_energy_2025_07_06.json  quality_report_energy_2025_07_07.json  quality_report_energy_2025_07_14.json  quality_report_energy_2025_07_24.json  quality_report_energy_2025_07_29.json  quality_report_energy_2025_08_04.json  quality_report_weather_2025_07_06.json  quality_report_weather_2025_07_07.json  quality_report_weather_2025_07_14.json  quality_report_weather_2025_07_24.json  quality_report_weather_2025_07_29.json  quality_report_weather_2025_08_04.json
notebooks/: exploration.ipynb
project1-energy-analysis-py3.11/: pyvenv.cfg
project1-energy-analysis-py3.11/Scripts/: activate  activate.bat
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py  visualizations.py
tests/: conftest.py  test_analysis.py  test_data_fetcher.py  test_data_processor.py  test_pipeline.py
