[tool.poetry]
name = "project1-energy-analysis"
version = "0.1.0"
description = "Energy demand forecasting and weather analysis pipeline with dashboard"
authors = ["Asimi Israel ayamayomide@gmail.com"]
# Remove package-mode = false and add packages configuration
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.3.0"
numpy = "^1.26.4"
requests = "^2.31.0"
streamlit = "^1.35.0"
plotly = "^5.22.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
statsmodels = "^0.14.4"
scipy = "1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v"]